--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "@xenova/transformers": "^2.17.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
